<resources>
    <!-- App title strings -->
    <string name="app_name" translatable="false">Itadakimasu</string>
    <string name="title_home">Home</string>
    <string name="title_new_recipe">New Recipe</string>
    <string name="title_favourites">My Favourites</string>
    <string name="title_profile">My Profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_recipe_creation">Recipe Creation</string>
    <string name="title_recipe_details">Recipe Details</string>
    <!-- Shared preferences keys -->
    <!-- Strings related to login and register -->
    <string name="app_logo">App logo</string>

    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="required">*Required</string>

    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="action_sign_up">Are you new? Sign up!</string>
    <string name="create_account">Create Account</string>

    <string name="welcome">"Welcome, %1$s!"</string>
    <string name="prompt_add_photo">Finish setting up your profile by adding a photo!</string>
    <string name="add_photo_info">Add a photo by tapping on the image</string>

    <!-- Error messages for login and register -->
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="username_chosen">The username is already chosen!</string>
    <string name="invalid_password">Password must be greater than 8 characters, lesser or equal than 30 and must contain numbers</string>
    <string name="invalid_repeated_password">The password does not match</string>

    <string name="login_failed">"Login failed"</string>
    <string name="image_error">Image couldn\'t be established</string>
    <string name="image_upload_error">Image could not be uploaded</string>
    <string name="image_user_error">Image could not be added on the profile</string>

    <string name="gallery_perm_denied_info">You must give permissions in order to set an image</string>


    <!-- Strings for dialog and actions -->
    <string-array name="media_selectors">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="ok" translatable="false">OK</string>
    <string name="done">Done!</string>
    <string name="exit">Exit</string>

    <string name="cancel">Cancel</string>
    <string name="no_thanks">No thanks</string>

    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="retry">Retry</string>

    <string name="more">More</string>
    <string name="go_back">Go back</string>

    <string name="delete">Delete</string>
    <string name="delete_recipe">Delete recipe?</string>
    <string name="delete_recipe_desc">%s:\nAre you sure to delete this recipe? Other users could have added this recipe as favourite</string>


    <!-- SelectMedia dialog -->
    <string name="select_media_method">Set the photo with</string>


    <!-- Strings for recipe creation -->
    <string name="write_title">Write your recipe\'s title here</string>
    <string name="write_description">Write something about the recipe!</string>
    <string name="add_recipe_Image">Add your recipe\'s image here</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_steps">Add Steps</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="add_description">Add description</string>

    <string name="fill_every_field">Please, fill every field</string>
    <string name="fields_empty">Fields empty</string>



    <!-- Strings for ingredients addition -->
    <string name="add_ingredient_information">Add ingredient information</string>
    <string name="ingredient_exists">An ingredient already exists with this description</string>
    <string name="ingredient_description_edit">Ingredient\'s description edition</string>
    <string name="add_ingredient_content_description">Add an ingredient to the list</string>

    <!-- Strings for steps addition -->
    <string name="step_description_edit">Step\'s description edition</string>
    <string name="add_step_information">Add step information</string>
    <string name="step_exists">A step already exists with this description</string>

    <!-- String for item layouts -->
    <string name="ingredient">Ingredient</string>
    <string name="step">Step</string>
    <string name="step_position" translatable="false">0</string>
    <!-- Card layouts image descriptions -->
    <string name="user_image_description">User\'s image</string>
    <string name="recipes_image_description">Recipe\'s image</string>

    <!-- Strings for recipe details -->
    <string name="recipe_details">Recipe Details</string>
    <string name="user_profile_image">User profile image</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>


    <!-- Error messages inside the app -->
    <string name="username_data_error">Error, username data could not be retrieved</string>
    <string name="user_data_retrieve_error">User data could not be retrieved</string>

    <string name="recipe_upload_error">The recipe could not be uploaded</string>
    <string name="recipe_update_error">The recipe could not be updated</string>
    <string name="recipe_delete_error">The recipe could not be deleted</string>

    <string name="list_retrieve_error">The list could not be retrieved</string>
    <string name="ingredient_list_load_error">The ingredient list could not be loaded</string>
    <string name="step_list_load_error">The step list could not be loaded</string>

    <string name="image_load_error">Image could not be loaded</string>

    <string name="add_fav_error">Recipe could not be added to favourites</string>
    <string name="remove_fav_error">Recipe could not be removed from favourites</string>
    <string name="load_recipe_data_fav_error">Some recipes data could not be retrieved</string>

    <!-- Strings for profile edition -->
    <string name="edit_profile_data">Edit your profile</string>
    <string name="exit_without_creating">Exit without creating?</string>
    <string name="recie_data_lost_warning">The recipe\'s data will be lost</string>
    <string name="without_description">Without description</string>
    <string name="without_title">Without title</string>
    <string name="edit_your_profile_data">Edit your profile data</string>

</resources>