<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.itadakimasu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="app.itadakimasu.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="app.itadakimasu.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="app.itadakimasu.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="app.itadakimasu.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_addPhotoFragment"
            app:destination="@id/navigation_photo_addition" />
    </fragment>
    <fragment
        android:id="@+id/navigation_photo_addition"
        android:name="app.itadakimasu.ui.register.addPhoto.AddPhotoFragment"
        android:label="fragment_add_photo"
        tools:layout="@layout/fragment_add_photo" >
        <action
            android:id="@+id/action_navigation_photo_addition_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="usernameDisplay"
            app:argType="string" />
    </fragment>
</navigation>