<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/divider">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_go_back"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/go_back"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="?attr/actionModeCloseDrawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/recipe_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_go_back"
            app:layout_constraintStart_toEndOf="@+id/ib_go_back"
            app:layout_constraintTop_toTopOf="@+id/ib_go_back" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_go_back" />

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/user_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_default_user_profile"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lines="1"
            android:text="@string/created_by"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_image"
            app:layout_constraintEnd_toStartOf="@+id/cb_favourite"
            app:layout_constraintStart_toEndOf="@+id/iv_user_image"
            app:layout_constraintTop_toTopOf="@+id/iv_user_image"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/cb_favourite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:button="@drawable/sl_favourite_24dp"
            android:checked="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_author" />

        <ImageView
            android:id="@+id/iv_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryLightColor"
            android:contentDescription="@string/recipes_image_description"
            android:src="@drawable/ic_baseline_image_not_supported_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="@string/without_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image" />

        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/without_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_title" />

        <TextView
            android:id="@+id/tv_ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/ingredients"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredient_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_title"
            tools:listitem="@layout/item_ingredient_display">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_steps_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/steps"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_ingredient_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_step_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_steps_title"
            tools:listitem="@layout/item_step_display" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

